Fix navbar overlap issue

--- a/website/assets/styles/layout.less
+++ b/website/assets/styles/layout.less
@@ -83,7 +83,6 @@ html, body {
 }
 
 [purpose='page-header'].header {
-  position: absolute;
   left: 0;
   right: 0;
   border-bottom: 1px solid #e2e4ea;
